[package]
name = "siostail"
version = "0.1.0"
authors = ["Pablo Couto <pablo@uncharted.space>"]
license = "LGPL-3.0"
publish = false

[dependencies]
chrono = "0.4"
crest = { git = "https://github.com/pablocouto/crest", branch = "next" }
error-chain = "0.10"
futures = "0.1"
hyper = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-timer = "0.1"